2005-02-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* INSTALL:
	* man/mod_mono.8.in: updated.

2005-02-10 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: no ranlib.

	* src/mod_mono.c: fixed a few minor problems found under apache 1.3.
	Don't pass the default mono config. directory to servers others than
	the default one. Fixed the default socket file name for non-default
	servers.

	* src/mod_mono.h: MonoSetServerAlias takes 1 argument even on
	apache 1.3.

	* README: updated...

2005-02-09 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: fixed autoscan warning and use 'if test'.
	* src/mod_mono.[ch]: added support for starting more than one
	mod-mono-server. All the existing directives can take now 2 parameters,
	the first being an alias for a mod-mono-server instance. Added
	MonoSetServerAlias to be used inside Location/Directory to choose which
	mod-mono-server instance will be used. The alias 'default' is assumed
	if the alias argument is omitted.

2005-02-08 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* src/mod_mono.c: removed MonoDebug stuff and unused
	apr_wait_for_io_or_timeout when compiling for apache 1.3.
	New AddMonoApplications directive that takes 2 arguments, the first one
	unused by now and the second one a set of applications to be appended
	to the existing ones.

	* src/mod_mono.h: #defined MAKE_CMD_ITERATE2.

2005-02-07 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: added --enable-debug to compile mod_mono with verbose
	logging.
	* src/mod_mono.c: comment on DEBUG and remove the unix socket file upon
	termination of mod-mono-server, just in case the finalizers are not
	called.

	Thanks to Rob Lyon.

2005-02-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in:
	* src/mod_mono.h: define our own variable when building for a big-endian
	architecture instead of using WORDS_BIGENDIAN, since some packages might
	have that defined on little-endian machines !?. Thanks to Winfried